--- a/CarMedia/CarMedia/Home.xaml
+++ b/CarMedia/CarMedia/Home.xaml
@@ -207,9 +207,9 @@
             <StackPanel.Effect>
                 <DropShadowEffect ShadowDepth="3" Direction="180" Color="White" BlurRadius="10" />
             </StackPanel.Effect>
-            <Image Source="Images/internet_Icon.png" MaxHeight="80" MouseDown="btnRadio_Click"></Image>            
+            <Image Source="Images/internet_Icon.png" MaxHeight="80" MouseDown="btnInternet_Click"></Image>            
         </StackPanel>
-        <Button x:Name="btnInternet" Content="Internet" Grid.Column="1" Grid.Row="3" Style="{StaticResource buttonStyle}"></Button>
+        <Button x:Name="btnInternet" Content="Internet" Grid.Column="1" Grid.Row="3" Style="{StaticResource buttonStyle}" Click="btnInternet_Click"></Button>
         
         <StackPanel Orientation="Horizontal" Margin="20,0" Grid.Row="0" Grid.Column="4">
             <Image Source="Images/phone_Icon.png" MaxHeight="80" Margin="30,0" MouseDown="btnPhone_Click"></Image>            
