--- a/CarMedia/CarMedia/MainWindow.xaml
+++ b/CarMedia/CarMedia/MainWindow.xaml
@@ -1,6 +1,7 @@
 ﻿<Window x:Class="CarMedia.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" WindowStyle="None"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        WindowStyle="None"
         Loaded="Window_Loaded"
         Title="MainWindow" ResizeMode="NoResize" WindowState="Maximized"
         Width="1280" Height="768">
