--- a/CarMedia/CarMedia/Phone.xaml
+++ b/CarMedia/CarMedia/Phone.xaml
@@ -1,10 +1,10 @@
-﻿<UserControl x:Class="CarMedia.Phone"
+﻿<Window x:Class="CarMedia.Phone"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
          xmlns:local="clr-namespace:WpfAppControl;assembly=WpfAppcontrol"
          Height="300" Width="300">
     <Grid Name="grid">
-        <Button Content="Button" Visibility="Hidden" Height="20" Click="Button_Click"></Button>
+        <!--<Button Content="Button" Visibility="Hidden" Height="20" Click="Button_Click"></Button>-->
         
     </Grid>
-</UserControl>
+</Window>
